--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -13,34 +13,41 @@
 			[v-cloak] {
 				visibility: hidden;
 			}
-			body{
+			
+			body {
 				background: #fff;
 			}
-			.mui-segmented-control{
+			
+			.mui-segmented-control {
 				border: 0px;
 				background: #F0F0F0;
 			}
-			.mui-segmented-control .mui-control-item{
+			
+			.mui-segmented-control .mui-control-item {
 				border: 0px;
 				color: #666;
 				font-size: 12px;
-			}			
+			}
+			
 			.mui-segmented-control .mui-control-item.mui-active {
-			    background-color: transparent;
-			    color: #666;
+				background-color: transparent;
+				color: #666;
 				font-size: 12px;
 			}
-			.mui-segmented-control .mui-control-item span{
+			
+			.mui-segmented-control .mui-control-item span {
 				font-size: 12px;
 				padding: 0 0 0 5px;
 				color: #666;
 			}
-			.leftTag{
+			
+			.leftTag {
 				font-size: 14px;
 				overflow: inherit;
 				white-space: normal;
 			}
-			.leftTag-title{
+			
+			.leftTag-title {
 				float: left;
 				color: #fff;
 				font-size: 12px;
@@ -48,18 +55,21 @@
 				border-radius: 4px;
 				margin-right: 5px;
 			}
-			.rightTag-title{
+			
+			.rightTag-title {
 				font-size: 13px;
-			    color: #999999;
-			    float: right;
+				color: #999999;
+				float: right;
 			}
-			.mui-ellipsis{
+			
+			.mui-ellipsis {
 				font-size: 13px;
 				color: #999999;
 				width: 80%;
 			}
-			.mui-table-view-cell:after{
-				left:0px;
+			
+			.mui-table-view-cell:after {
+				left: 0px;
 			}
 			
 			#topPopover {
@@ -67,10 +77,12 @@
 				top: 16px;
 				right: 6px;
 			}
+			
 			#topPopover .mui-popover-arrow {
 				left: auto;
 				right: 6px;
 			}
+			
 			.mui-popover {
 				height: 80px;
 			}
@@ -84,7 +96,7 @@
 			<!--<a href="#bottomPopover" class="mui-pull-right" style="color: white;width:120px;height: 45px; font-size: 25px;"><img style="width: 17px;float: right;margin: 12px 5px 0 0;" src="../../img/utils/more.png"/></a>-->
 		</header>
 		<div class="mui-content" id="selectTitle" style="position: fixed;z-index: 1;">
-			<div class="mui-segmented-control" >
+			<div class="mui-segmented-control">
 				<a class="mui-control-item" v-cloak href="javascript:void(0)" @tap="selectGrade()"><span>{{grade}}</span><span class="mui-icon mui-icon-arrowdown"></span></a>
 				<a class="mui-control-item" v-cloak href="javaScript:void(0)" @tap="selectClass()"><span>{{classes}}</span><span class="mui-icon mui-icon-arrowdown"></span></a>
 				<a class="mui-control-item" v-cloak href="javaScript:void(0)" @tap="selectType()"><span>{{type}}</span><span class="mui-icon mui-icon-arrowdown"></span></a>
@@ -127,15 +139,15 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div id="bottomPopover" class="mui-popover mui-popover-bottom">
 				<div class="mui-popover-arrow"></div>
-					<ul class="mui-table-view">
-						<li class="mui-table-view-cell" @tap="toPage('http://')">生成量化报告</li>
-						<li class="mui-table-view-cell" @tap="toPage('http://')">查看量化指标</li>
-					</ul>
-				</div>
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell" @tap="toPage('http://')">生成量化报告</li>
+					<li class="mui-table-view-cell" @tap="toPage('http://')">查看量化指标</li>
+				</ul>
 			</div>
+		</div>
 		</div>
 		<script src="../../js/mui2.js"></script>
 		<script src="../../js/utils/mui.picker.js"></script>
@@ -154,22 +166,26 @@
 		<script src="../../js/studentManage/studentManagePermission.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript">
-			var m$=mui.init()
+			var m$ = mui.init()
 			var pageIndex = 1; //请求数据页面
 			var pageSize = 10; //请求数据页面
 			var totalPageCount; //总页码
 			var flagRef = 0; //是刷新0，还是加载更多1
-			var userPicker = new m$.PopPicker({layer: 2});
-			var typePicker = new m$.PopPicker({layer: 1});
-			mui.plusReady(function(){
-				studentMP.getStudentManagePermission(1,2,function(array){
-					console.log("ABCD=="+JSON.stringify(array))
-					selectTitle.list=array;
-					if(array.length>0){
-						var allGrade=array[0];
-						var allClasses=allGrade.children[0];
-						selectTitle.sGrade=allGrade.value;
-						selectTitle.sClasses=allClasses.value;
+			var userPicker = new m$.PopPicker({
+				layer: 2
+			});
+			var typePicker = new m$.PopPicker({
+				layer: 1
+			});
+			mui.plusReady(function() {
+				studentMP.getStudentManagePermission(1, 2, function(array) {
+					console.log("ABCD==" + JSON.stringify(array))
+					selectTitle.list = array;
+					if(array.length > 0) {
+						var allGrade = array[0];
+						var allClasses = allGrade.children[0];
+						selectTitle.sGrade = allGrade.value;
+						selectTitle.sClasses = allClasses.value;
 						getReviewList(pageIndex);
 					}
 				});
@@ -179,80 +195,91 @@
 				$("#bottomPopover").hide();
 				$(".mui-backdrop").hide();
 			});
-			
+
 			var actionArrayData = new Vue({
 				el: "#actionArrayData",
 				data: {
 					actionArray: []
 				},
 				methods: {
-					gotoDeatil:function(model,index){
-						console.log('点击第'+index+'个标签进入详情');
+					gotoDeatil: function(model, index) {
+						console.log('点击第' + index + '个标签进入详情');
 						var tempM = {
-							model:model,
-							stuArray:selectTitle.list
+							model: model,
+							stuArray: selectTitle.list
 						}
-						utils.mOpenWithData("../../html/studentManage/student-reviewClass.html", tempM);	
+						utils.mOpenWithData("../../html/studentManage/student-reviewClass.html", tempM);
 					},
-					toPage:function(url){
-//						plus.webview.open(url);
+					toPage: function(url) {
+						//						plus.webview.open(url);
 						$("#bottomPopover").hide();
 						$(".mui-backdrop").hide();
 						utils.mOpenWithData(url, {});
-					} 
+					}
 				}
 			});
-			
-			var selectTitle =new Vue({
-				el:"#selectTitle",
-				data:{
-					grade:'全部年级',
-					classes:'全部班级',
-					type:'全部类型',
-					list:[],
-					sGrade:"",//存值用
-					sClasses:"",//存值用
-					typeValue:"",//存值用
-					typeList:[
-							 {value: '',text: '全部类型'},
-							 {value: 'termEvaluation',text: '期评'},
-							 {value: 'weekEvaluation',text: '周评'},
-							 {value: 'monthEvaluation',text: '月评'},
-						 ]
+
+			var selectTitle = new Vue({
+				el: "#selectTitle",
+				data: {
+					grade: '全部年级',
+					classes: '全部班级',
+					type: '全部类型',
+					list: [],
+					sGrade: "", //存值用
+					sClasses: "", //存值用
+					typeValue: "", //存值用
+					typeList: [{
+							value: '',
+							text: '全部类型'
+						},
+						{
+							value: 'termEvaluation',
+							text: '期评'
+						},
+						{
+							value: 'weekEvaluation',
+							text: '周评'
+						},
+						{
+							value: 'monthEvaluation',
+							text: '月评'
+						},
+					]
 				},
-				methods:{
-					selectGrade:function(){
+				methods: {
+					selectGrade: function() {
 						userPicker.setData(selectTitle.list);
 						userPicker.show(function(items) {
-							selectTitle.grade=_getParam(items[0], 'text');
-							selectTitle.classes=_getParam(items[1], 'text');
-							selectTitle.sGrade=_getParam(items[0], 'value');
-							selectTitle.sClasses=_getParam(items[1], 'value');
+							selectTitle.grade = _getParam(items[0], 'text');
+							selectTitle.classes = _getParam(items[1], 'text');
+							selectTitle.sGrade = _getParam(items[0], 'value');
+							selectTitle.sClasses = _getParam(items[1], 'value');
 							pageIndex = 1;
 							flagRef = 0;
 							getReviewList(pageIndex);
 						});
 					},
-					selectClass:function(){
+					selectClass: function() {
 						this.$options.methods.selectGrade();
 					},
-					selectType:function(){
-						var obj=this;
+					selectType: function() {
+						var obj = this;
 						typePicker.setData(this.typeList);
 						typePicker.show(function(items) {
-							obj.type=_getParam(items[0], 'text');
-							obj.typeValue=_getParam(items[0], 'value');
+							obj.type = _getParam(items[0], 'text');
+							obj.typeValue = _getParam(items[0], 'value');
 							pageIndex = 1;
 							flagRef = 0;
 							getReviewList(pageIndex);
 						});
 					}
 				}
-			}); 
+			});
 			var _getParam = function(obj, param) {
 				return obj[param] || '';
 			}
-			
+
 			//阻尼系数、初始化刷新加载更多
 			var deceleration = mui.os.ios ? 0.003 : 0.0009;
 			mui('.mui-scroll-wrapper').scroll({
@@ -268,10 +295,10 @@
 						var self = this;
 						pageIndex = 1;
 						flagRef = 0;
-						getReviewList(pageIndex);
-						setTimeout(function() {
-							self.endPullDownToRefresh();
-						}, 1000);
+						getReviewList(pageIndex, this);
+						//						setTimeout(function() {
+						//							self.endPullDownToRefresh();
+						//						}, 1000);
 					}
 				},
 				up: {
@@ -279,13 +306,13 @@
 						var self = this;
 						flagRef = 1;
 						if(pageIndex <= totalPageCount) {
-							getReviewList(pageIndex);
-							setTimeout(function() {
-								self.endPullUpToRefresh();
-								if(mui(".mui-table-view-cell").length < 10) {
-									mui(".mui-pull-loading")[0].innerHTML = "";
-								}
-							}, 1000);
+							getReviewList(pageIndex, this);
+							//							setTimeout(function() {
+							//								self.endPullUpToRefresh();
+							//								if(mui(".mui-table-view-cell").length < 10) {
+							//									mui(".mui-pull-loading")[0].innerHTML = "";
+							//								}
+							//							}, 1000);
 						} else {
 							self.endPullUpToRefresh();
 							mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
@@ -294,24 +321,24 @@
 				}
 			});
 			//4.1 量化考评首页列表
-			function getReviewList(index) {
-				console.log("pageIndex===="+pageIndex);
-				console.log("flagRef===="+flagRef);
-				var gradeValue=selectTitle.sGrade;
-				var classesValue=selectTitle.sClasses;
-				var comData ={
-					grdIds:gradeValue,
-					clsIds:classesValue,
-					type:selectTitle.typeValue,
-					pageSize:pageSize,
-					pageNumber:index
+			function getReviewList(index, self) {
+				console.log("pageIndex====" + pageIndex);
+				console.log("flagRef====" + flagRef);
+				var gradeValue = selectTitle.sGrade;
+				var classesValue = selectTitle.sClasses;
+				var comData = {
+					grdIds: gradeValue,
+					clsIds: classesValue,
+					type: selectTitle.typeValue,
+					pageSize: pageSize,
+					pageNumber: index
 				}
 				var wd;
-				if(flagRef==0){
-					wd= events.showWaiting();
+				if(flagRef == 0) {
+					wd = events.showWaiting();
 				}
-				getReviewEvaluationIndex(comData,function(data) {
-					if(flagRef==0){
+				getReviewEvaluationIndex(comData, function(data) {
+					if(flagRef == 0) {
 						wd.close();
 					}
 					console.log('4.1 量化考评首页列表' + JSON.stringify(data));
@@ -320,25 +347,39 @@
 						totalPageCount = data.RspData.totalPage;
 						pageIndex++;
 						if(flagRef == 0) { //刷新
-							studentMP.setGrdNameClsName(selectTitle.list,data.RspData.list,function(array){
-								console.log("array=="+JSON.stringify(array));
+							if(self) {
+								self.endPullDownToRefresh();
+							}
+							studentMP.setGrdNameClsName(selectTitle.list, data.RspData.list, function(array) {
+								console.log("array==" + JSON.stringify(array));
 								actionArrayData.actionArray = array;
-								mui('.mui-scroll-wrapper').scroll().setTranslate(0,0);
+								mui('.mui-scroll-wrapper').scroll().setTranslate(0, 0);
 							})
 						} else { //加载更多
+							if(self) {
+								self.endPullUpToRefresh();
+							}
 							//合并数组
-							studentMP.setGrdNameClsName(selectTitle.list,data.RspData.list,function(array){
-								console.log("array222222222222=="+JSON.stringify(actionArrayData.actionArray));
+							studentMP.setGrdNameClsName(selectTitle.list, data.RspData.list, function(array) {
+								console.log("array222222222222==" + JSON.stringify(actionArrayData.actionArray));
 								actionArrayData.actionArray = actionArrayData.actionArray.concat(array);
 							})
 						}
 					} else {
-//							mui.toast(data.RspTxt);
+						if(flagRef == 0) { //刷新
+							if(self) {
+								self.endPullDownToRefresh();
+							}
+						} else { //加载更多
+							if(self) {
+								self.endPullUpToRefresh();
+							}
+						}
+						mui.toast(data.RspTxt);
 					}
 				});
 			};
-			
 		</script>
 	</body>
- 
+
 </html>
